--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 .container {
-    width: 1920px;
-    margin: 0 auto;
+    width: 1320px;
+    margin: auto;
 }
 
 /* header section starts */
@@ -61,13 +61,29 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 162px;
+    padding: 20px 40px;
 }
 
 .navbar_logo img {
     width: 160px;
     height: 48px;
 }
+
+.hamburger {
+  display: none; /* default hidden */
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.hamburger span {
+  width: 24px;
+  height: 2px;
+  background-color: white;
+  display: block;
+  border-radius: 2px;
+}
+
 
 .navbar_menu ul {
     display: flex;
@@ -115,7 +131,7 @@ body {
 }
 
 .main_hero_sec {
-    padding: 0px 162px;
+    padding: 0px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -129,25 +145,31 @@ body {
     width: 50%;
 }
 
+.hero_content img{
+    width: 129px;
+    height: 129px;
+}
+
+
 .hero_content {
-    width: 758px;
+    width: 610px;
+    padding-left: 35px;
     position: relative;
 }
 
 .hero_content img {
     position: absolute;
-    right: -150px;
+    right: -105px;
     top: 7px;
 }
 
 .hero_img img {
     width: 100%;
-    height: auto;
 }
 
 .hero_content h1 {
     font-weight: 600;
-    font-size: 60px;
+    font-size: 46px;
     line-height: 120%;
     color: rgba(255, 255, 255, 1);
     margin-bottom: 24px;
@@ -155,22 +177,22 @@ body {
 
 .hero_content p {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 150%;
     color: rgba(153, 153, 153, 1);
 }
 
 .hero_content_btns {
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 .hero_content_btns a {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 150%;
     border-radius: 10px;
     text-decoration: none;
-    padding: 18px 24px;
+    padding: 14px 20px;
     color: rgba(255, 255, 255, 1);
 }
 
@@ -181,7 +203,7 @@ body {
 
 .hero_content_btns .btn_browse {
     background: rgba(112, 59, 247, 1);
-    margin-left: 20px;
+    margin-left: 16px;
 }
 
 .hero_boxes {
@@ -189,27 +211,26 @@ body {
     align-items: center;
     justify-content: center;
     gap: 20px;
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 .hero_boxes .box {
     background: rgba(26, 26, 26, 1);
     border: 1px solid rgba(38, 38, 38, 1);
-    padding: 16px 24px;
+    padding: 14px 20px;
     border-radius: 10px;
-    flex: 1;
 }
 
 .hero_boxes .box h2 {
     font-weight: 700;
-    font-size: 40px;
+    font-size: 30px;
     line-height: 150%;
     color: rgba(255, 255, 255, 1);
 }
 
 .hero_boxes .box p {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 150%;
     color: rgba(153, 153, 153, 1);
 }
@@ -220,43 +241,47 @@ body {
     border: 1px solid rgba(38, 38, 38, 1);
     box-shadow: 0px 0px 0px 10px rgba(25, 25, 25, 1);
     background: rgba(20, 20, 20, 1);
-    padding: 20px;
+    padding: 10px;
 }
 
 .sub_hero_boxes {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
     text-align: center;
-    /* margin-top: 60px; */
 }
 
 .sub_hero_box {
-    padding: 40px 20px;
+    padding: 30px 16px;
     border: 1px solid rgba(38, 38, 38, 1);
     background: rgba(26, 26, 26, 1);
     border-radius: 12px;
     position: relative;
 }
 
-.sub_hero_box .right_arrow{
+.sub_hero_box .right_arrow {
     position: absolute;
     right: 20px;
     top: 20px;
+    width: 26px;
+    height: 26px;
+}
+
+.sub_hero_box .box_icon {
+    width: 60px;
+    height: 60px;
 }
 
 .sub_hero_box h3 {
     font-weight: 600;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 150%;
     color: rgba(255, 255, 255, 1);
     margin-top: 20px;
 }
 
-
-
-.box {
+.sub_hero_boxes .box {
     flex: 1;
 }
 
